--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="#" class="lnk">Download Excursion (Coming soon!)</a>
+    <p>
+      <a href="#" class="lnk">Download Excursion (Coming soon!)</a>
+    </p>
+    <div class="vdo">
+      <video src="./resources/videos/excursion.mp4" autoplay muted loop>Video not supported</video>
+    </div>
   </body>
 </html>
