--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!-- Main content -->
     <h1>Discover hidden places in the world around you</h1>
     <p>
       <a href="#" class="lnk">Download Excursion (Coming soon!)</a>
@@ -13,5 +14,19 @@
     <div class="vdo">
       <video src="./resources/videos/excursion.mp4" autoplay muted loop>Video not supported</video>
     </div>
+    <h2>Your personal travel guide</h2>
+    <p>
+      <span>Excursion remembers places you like, and recommends new points of interest around you.</span>
+    </p>
+    <p>
+      <img src="./resources/images/camp.jpg" alt="camp" />
+    </p>
+    <p>
+      <img src="./resources/images/phone.png" alt="phone" />
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+      <a href="#" class="lnk">Download Excursion (Coming soon!)</a>
+    </p>
   </body>
 </html>
