--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <h2>Your personal travel guide</h2>
     <p>
-      <span>Excursion remembers places you like, and recommends new points of interest around you.</span>
+      Excursion remembers places you like, and recommends new points of interest around you.
     </p>
     <p>
       <img src="./resources/images/camp.jpg" alt="camp" />
@@ -28,5 +28,8 @@
     <p>
       <a href="#" class="lnk">Download Excursion (Coming soon!)</a>
     </p>
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
   </body>
 </html>
